--- a/apps/remix-ide/src/index.html
+++ b/apps/remix-ide/src/index.html
@@ -5,19 +5,15 @@
 		<meta charset="utf-8">
 		<!--
 		The MIT License (MIT)
-
 		Copyright (c) 2014, 2015, the individual contributors
-
 		Permission is hereby granted, free of charge, to any person obtaining a copy
 		of this software and associated documentation files (the "Software"), to deal
 		in the Software without restriction, including without limitation the rights
 		to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 		copies of the Software, and to permit persons to whom the Software is
 		furnished to do so, subject to the following conditions:
-
 		The above copyright notice and this permission notice shall be included in
 		all copies or substantial portions of the Software.
-
 		THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 		IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 		FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -114,8 +110,9 @@
 				})
 			}
 		</script>
+		<script src="runtime.js" type="module"></script>
 		<script src="polyfills.js" type="module"></script>
-		<script src="main.js" type="module"></script>
+		<script src="vendor.js" type="module"></script>
 		<script src="https://kit.fontawesome.com/41dd021e94.js" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="assets/js/intro.min.js"></script>
 	</body>
